package io.github.team10.escapefromuni;

public class Event {
    
}
